Cleanup styles and fix layout bugs
Start to cleanup styles, including renaming colors to have better semantic meaning...also fixed some issues with the UI including missing chip strokes, and also some a11y fixes

--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -22,7 +22,7 @@
         android:id="@+id/navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/color_primary"
+        android:background="@color/primary_green"
         app:itemIconTint="@color/white_selector"
         app:itemTextColor="@color/white_selector"
         app:layout_constraintBottom_toBottomOf="parent"
