--- a/app/src/main/res/drawable/bg_gradient_icon.xml
+++ b/app/src/main/res/drawable/bg_gradient_icon.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="270"
-        android:endColor="@color/color_primary"
-        android:startColor="@color/color_primary_variant"
+        android:endColor="@color/primary_green"
+        android:startColor="@color/primary_green_variant"
         android:type="linear" />
 </shape>
