--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -32,7 +32,8 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="fitCenter"
                 android:transitionName="@string/transition_string"
-                app:layout_collapseMode="parallax" />
+                app:layout_collapseMode="parallax"
+                android:contentDescription="@string/backdrop_image"/>
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/detail_toolbar"
@@ -72,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="64dp"
                     android:layout_marginLeft="64dp"
-                    android:text="Getting info"/>
+                    android:text="@string/getting_info"/>
 
                 <ProgressBar
                     android:layout_width="match_parent"
@@ -151,7 +152,7 @@
                         android:paddingBottom="8dp">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
@@ -285,7 +286,7 @@
                         android:paddingBottom="8dp">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
@@ -491,6 +492,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
                             android:layout_marginBottom="16dp"
                             android:text="@string/guideline_explain"
@@ -539,6 +541,7 @@
                                 android:gravity="center"
                                 android:text="@string/percent_40"
                                 android:textColor="@android:color/white"
+                                app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/guideline_40"
                                 app:layout_constraintStart_toStartOf="parent" />
 
@@ -551,6 +554,7 @@
                                 android:gravity="center"
                                 android:text="@string/percent_20"
                                 android:textColor="@android:color/white"
+                                app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintEnd_toStartOf="@+id/perc1_right"
                                 app:layout_constraintStart_toStartOf="@+id/guideline_40" />
 
@@ -563,6 +567,7 @@
                                 android:gravity="center"
                                 android:text="@string/percent_40"
                                 android:textColor="@android:color/white"
+                                app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="@+id/guideline_60"/>
 
