--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -20,7 +20,7 @@
         android:id="@+id/header_versioninfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Version: "
+        android:text="@string/version"
         android:textAppearance="?textAppearanceBody1"/>
 
 </LinearLayout>
