--- a/app/src/main/res/xml/simple_motion_scene.xml
+++ b/app/src/main/res/xml/simple_motion_scene.xml
@@ -5,7 +5,7 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@+id/start"
-        motion:interpolator="easeOut"
+        motion:motionInterpolator="easeOut"
         motion:duration="1000">
         <OnSwipe
             motion:dragDirection="dragUp"
